<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigureEquipIPActivity" >

            <TextView
            android:id="@+id/txtIP"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/IP"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txbIP"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/txtIP"
            android:ems="10"
            android:inputType="text|number"
            android:text="192.168.1.70" />

        <TextView
            android:id="@+id/txtPort"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtIP"
            android:layout_marginTop="15dp"
            android:text="@string/Port"
            android:textAppearance="?android:attr/textAppearanceLarge"
             />

        <EditText
            android:id="@+id/txbPort"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txbIP"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/txtPort"
            android:ems="10"
            android:inputType="number"
            android:text="1471" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txbPort"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/Save" />

</RelativeLayout>