<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditRoomActivity" >

 		<TextView
            android:id="@+id/txtTitleRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtEstores"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitleRoom"
            android:layout_marginTop="10dp"
            android:text="@string/NrEstores"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txbEstores"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitleRoom"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/txtEstores"
            android:ems="10"
            android:inputType="number"
            android:text="0" />

        <TextView
            android:id="@+id/txtPortas"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEstores"
            android:layout_marginTop="15dp"
            android:text="@string/NrPortas"
            android:textAppearance="?android:attr/textAppearanceLarge"
             />

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/txbPortas"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txbEstores"
            android:layout_toRightOf="@+id/txtPortas"
            android:ems="10"
            android:inputType="number"
            android:text="0" />

        <TextView
            android:id="@+id/txtLuzes"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPortas"
            android:layout_marginTop="10dp"
            android:text="@string/NrLuzes"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/txbLuzes"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txbPortas"
            android:layout_toRightOf="@+id/txtLuzes"
            android:ems="10"
            android:inputType="number"
            android:text="0" />

        <Button
            android:id="@+id/save_equipment_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txbLuzes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="116dp"
            android:text="Save Me!" />

</RelativeLayout>